# desktop_detection

data/: cloud_cluster_after_Plane_segmentation0.pcd  desktop_filter.pcd  table_scene_lms400_plane_1.pcd
seg/: CMakeLists.txt  alpha_boundary_extract.cpp  boundary_extract.cpp  inputCloud2.txt  test.cpp
